--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,7 +9,7 @@ on:
 jobs:
   dummy_test:
     runs-on: ubuntu-latest
-    steps:
-      
-      if: startsWith(github.event.head_commit.modified, 'major')
-      - run: echo 'Make renovate automerge excuted'
+     - name:step 1
+    steps:    
+       if: startsWith(github.event.head_commit.modified, 'major')
+        - run:echo 'Make renovate automerge excuted'
